--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="menu">
           <li>
-            <a href="../about.html">about</a>
+            <a href="about.html">about</a>
           </li>
           <li>
             <a>work</a>
