--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
     <main>
       <button>
-        <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
       </button>
 
       <h1 class="about">ABOUT</h1>
