--- a/college/Year 2.html
+++ b/college/Year 2.html
@@ -20,27 +20,27 @@
     <header>
       <nav>
         <div>
-          <a href="../../index.html"><h1 class="logo">Minjung Cho</h1></a>
+          <a href="../index.html"><h1 class="logo">Minjung Cho</h1></a>
         </div>
         <ul class="menu">
           <li>
-            <a href="../../about.html">about</a>
+            <a href="../about.html">about</a>
           </li>
           <li>
             <a>work</a>
             <ul class="submenu">
               <li>
-                <a href="../../highschool/highschool.html">highschool</a>
+                <a href="../highschool/highschool.html">highschool</a>
                 <!-- <ul class="submenu2">
                   <li><a href="#">AP </a></li>
                   <li><a href="#">Emotion</a></li>
                 </ul> -->
               </li>
               <li>
-                <a href="../../college/college.html">college</a>
+                <a href="../college/college.html">college</a>
                 <ul class="submenu2">
-                  <li><a href="../../college/Year 1.html">Year 1 </a></li>
-                  <li><a href="../../college/Year 2.html">Year 2 </a></li>
+                  <li><a href="../college/Year 1.html">Year 1 </a></li>
+                  <li><a href="../college/Year 2.html">Year 2 </a></li>
                 </ul>
               </li>
             </ul>
